--- a/static/viewer/viewer.css
+++ b/static/viewer/viewer.css
@@ -122,6 +122,7 @@ body {
   gap: 1rem;
   min-height: 0;
   margin: 0;
+  padding-block: 1rem;
   grid-column: 2 / 3;
 }
 
